Issue #LR-422 feat: Removed the authorization header as it is calling the pod directly.